--- a/petarium.html
+++ b/petarium.html
@@ -1,79 +1,83 @@
 <!DOCTYPE html>
-<html > 
-    <head>
-        <title>Petarium</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <div class="container">
-        <div class="flexbox-container">
-            <div class="flexbox-item flexbox-item-1">
-                <img src="pics/10.png" alt="owlie" height="30px" width="50px"> <strong>PetShow</strong>
-            </div>
-            <div class="flexbox-item flexbox-item-2"> 
-                <a href="http://petarium.com">Home</a>
-                <a href="http://petarium.com">Collection</a>
-               <a href="http://petarium.com">AllPet</a> 
-                <a href="http://petarium.com">Contact</a> 
-            </div>
-            <div class="flexbox-item flexbox-item-3">
-                <button>Login</button>
-            </div>
-        </div>
-        <div class="grid-container1">
-            <div class="grid-item grid-item-1">
-                <img src="pics/2.png" alt="bone" height="100px" width="100px">
-            </div>
-            <div class="grid-item grid-item-2">
-                <h1>The best place to get your favourite pet without any doubt</h1>
-            </div>
-            <div class="grid-item grid-item-3">
-                 <img src="pics/1.png" alt="paws" height="100px" width="100px">
-            </div>
-            <div class="grid-item grid-item-4">
-                <img src="pics/3.png" alt="grassdawg" height="100px" width="100px">
-            </div>
-            <div class="grid-item grid-item-5">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, ex. Libero, magnam assumenda?</p>
-                <button type="button"> Get Started </button>
-            </div>
-            <div class="grid-item grid-item-6">
-                <img src="pics/4.png" alt="beachdawg" height="100px" width="100px">
-            </div>
-        </div>
-        <ul>
-            <div class="grid-container2">
-               <li> <div class="grid-item grid-item-11"><img src="pics/6.png" alt="ayedawg" width="250px" height="250px"></div> </li>
-               <li> <div class="grid-item grid-item-22"><img src="pics/7.png" alt="pup" width="250px" height="250px"></div> </li>
-               <li> <div class="grid-item grid-item-33"><img src="pics/9.png" alt="tdawg" width="150px" height="250px"></div> </li>
-            </div>
-        </ul>
-        <div class="grid-container3">
-            <div class="grid-item grid-item-111">
-                 <h1>Explore our features</h1> 
-                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum a libero ratione.</p>
-                </div>
-            <div class="grid-item grid-item-222">
-                <img src="pics/5.png" alt="cube" width="50px" height="50px">
-                <h3>Multi-color Pet</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, maxime.</p>
-            </div>
-            <div class="grid-item grid-item-333">
-                <img src="pics/5.png" alt="cube" width="50px" height="50px">
-                <h3>Quality Pet</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, libero!</p>
-            </div>
-            <div class="grid-item grid-item-444">
-                <img src="pics/5.png" alt="cube" width="50px" height="50px">
-                <h3>Doctor Advise</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, similique!</p>
-            </div>
-            <div class="grid-item grid-item-555">
-                <img src="pics/5.png" alt="cube" width="50px" height="50px">
-                <h3>Home Delivery</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, necessitatibus!</p>
-            </div>
-        </div>
+<html>
+<head>
+  <title>Petarium</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="container">
+    <div class="header-container">
+      <div class="header-item header-item-1">
+        <img src="pics/10.png" alt="owlie" height="30px" width="50px"> <strong>PetShow</strong>
+      </div>
+      <div class="header-item header-item-2">
+        <a href="http://petarium.com">Home</a>
+        <a href="http://petarium.com">Collection</a>
+        <a href="http://petarium.com">AllPet</a>
+        <a href="http://petarium.com">Contact</a>
+      </div>
+      <div class="header-item header-item-3">
+        <button class="login-btn">Login</button>
+      </div>
     </div>
-    </body>
+    <div class="main-content-container">
+      <div class="main-content-item main-content-item-1">
+        <img src="pics/2.png" alt="bone" height="100px" width="100px">
+      </div>
+      <div class="main-content-item main-content-item-2">
+        <h1 class="main-title">The best place to get your favourite pet without any doubt</h1>
+      </div>
+      <div class="main-content-item main-content-item-3">
+        <img src="pics/1.png" alt="paws" height="100px" width="100px">
+      </div>
+      <div class="main-content-item main-content-item-4">
+        <img src="pics/3.png" alt="grassdawg" height="100px" width="100px">
+      </div>
+      <div class="main-content-item main-content-item-5">
+        <p class="main-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, ex. Libero, magnam assumenda?</p>
+        <button type="button" class="get-started-btn"> Get Started </button>
+      </div>
+      <div class="main-content-item main-content-item-6">
+        <img src="pics/4.png" alt="beachdawg" height="100px" width="100px">
+      </div>
+    </div>
+    <div class="featured-pets-container">
+      <div class="featured-pets-item featured-pets-item-1">
+        <img src="pics/6.png" alt="ayedawg" width="250px" height="250px">
+      </div>
+      <div class="featured-pets-item featured-pets-item-2">
+        <img src="pics/7.png" alt="pup" width="250px" height="250px">
+      </div>
+      <div class="featured-pets-item featured-pets-item-3">
+        <img src="pics/9.png" alt="tdawg" width="150px" height="250px">
+      </div>
+    </div>
+    <div class="features-container">
+      <div class="features-item features-item-1">
+        <h1 class="features-title">Explore our features</h1>
+        <p class="features-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum a libero ratione.</p>
+      </div>
+      <div class="features-item features-item-2">
+        <img src="pics/5.png" alt="cube" width="50px" height="50px" class="feature-icon">
+        <h3 class="feature-title">Multi-color Pet</h3>
+        <p class="feature-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, maxime.</p>
+      </div>
+      <div class="features-item features-item-3">
+        <img src="pics/5.png" alt="cube" width="50px" height="50px" class="feature-icon">
+        <h3 class="feature-title">Quality Pet</h3>
+        <p class="feature-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, libero!</p>
+      </div>
+      <div class="features-item features-item-4">
+        <img src="pics/5.png" alt="cube" width="50px" height="50px" class="feature-icon">
+        <h3 class="feature-title">Doctor Advise</h3>
+        <p class="feature-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto, similique!</p>
+      </div>
+      <div class="features-item features-item-5">
+        <img src="pics/5.png" alt="cube" width="50px" height="50px" class="feature-icon">
+        <h3 class="feature-title">Home Delivery</h3>
+        <p class="feature-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, necessitatibus!</p>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
