--- a/petarium.html
+++ b/petarium.html
@@ -8,7 +8,7 @@
         <div class="container">
         <div class="header-container">
             <div class="header-item header-item-1">
-                <img src="pics/10.png" alt="owlie" height="30px" width="50px"> <strong>PetShow</strong>
+                <img src="pics/10.png" alt="owlie" height="30px" width="50px" class="icon1"> <strong>PetShow</strong>
             </div>
             <div class="header-item header-item-2"> 
                 <a href="http://petarium.com">Home</a>
@@ -22,23 +22,23 @@
         </div>
         <div class="main-content-container">
             <div class="main-content-item main-content-item-1">
-                <img src="pics/2.png" alt="bone" height="100px" width="100px">
+                <img src="pics/2.png" alt="bone" height="100px" width="100px" class="icon2">
             </div>
             <div class="main-content-item main-content-item-2">
                 <h1 class="main-title">The best place to get your favourite pet without any doubt</h1>
             </div>
             <div class="main-content-item main-content-item-3">
-                 <img src="pics/1.png" alt="paws" height="100px" width="100px">
+                 <img src="pics/1.png" alt="paws" height="100px" width="100px" class="icon3">
             </div>
             <div class="main-content-item main-content-item-4">
-                <img src="pics/3.png" alt="grassdawg" height="100px" width="100px">
+                <img src="pics/3.png" alt="grassdawg" height="100px" width="100px" class="icon4">
             </div>
             <div class="main-content-item main-content-item-5">
                 <p class="main-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, ex. Libero, magnam assumenda?</p>
                 <button type="button" class="get-started-btn"> Get Started </button>
             </div>
             <div class="main-content-item main-content-item-6">
-                <img src="pics/4.png" alt="beachdawg" height="100px" width="100px">
+                <img src="pics/4.png" alt="beachdawg" height="100px" width="100px" class="icon5">
             </div>
         </div>
         <ul>
